# microshop

./: items_view.py  main.py  pyproject.toml
users/: crud.py  views.py
